Fix goupile popup showing behind main menu bar

--- a/src/goupile/client/goupile.css
+++ b/src/goupile/client/goupile.css
@@ -194,6 +194,6 @@ button:not(:disabled) { cursor: pointer; }
     border: 1px solid #dfdfdf;
     background: #efefef;
     box-shadow: 2px 2px rgba(136, 136, 136, 0.12);
-    z-index: 9999;
+    z-index: 999999;
 }
 #gp_popup.active { display: block; }
